--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "frontend-project",
   "version": "1.0.0",
   "description": "Integrating backend with frontend",
-  "main":"index.js",
+  "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --open --hot",
-    "build":"webpack --mode production"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
   },
   "author": "Naveen Chauhan",
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
@@ -21,7 +24,9 @@
     "@babel/runtime": "^7.22.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
